saves/test/demo_full_20240802_193545/count15/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp count15_tb.v count15.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
count15_tb.v:105: $finish called at 920000 (1ps)

iverilog cmd 2 error:

